feat: ✨ final feature

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -43,7 +43,7 @@
     },
     "footer": {
       "company": "Company",
-      "address": ""
+      "address": "Company address: Lô 6 khu đô thị Nam Thanh, ngõ 1 đường Nguyễn Thị Duệ, Yên Hòa, Cầu Giấy, Hà Nội"
     }
   }
 }
