--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -44,7 +44,7 @@
     },
     "footer": {
       "company": "Company",
-      "address": ""
+      "address": "Địa chỉ công ty: Lô 6 khu đô thị Nam Thanh, ngõ 1 đường Nguyễn Thị Duệ, Yên Hòa, Cầu Giấy, Hà Nội"
     }
   }
 }
