translate: translate guide

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -47,18 +47,176 @@
     }
   },
   "Guide": {
-    "title-1": "Hướng dẫn đăng ký tài khoản bukbe bằng Telegram",
-    "title-2": "Hướng dẫn đăng ký tài khoản bukbe bằng số điện thoại",
-    "title-3": "Hướng đăng nhập bằng số điện thoại",
-    "title-4": "Hướng dẫn đăng nhập vào bukbe bằng mã otp Telegram",
-    "title-5": "Hướng dẫn đặt lịch từ Bukbe shop ",
-    "title-6": "Hướng dẫn tạo thương hiệu  ",
-    "title-7": "Hướng dẫn tạo cửa hàng",
-    "title-8": "Hướng dẫn nhận đơn đặt và bắt đầu phục vụ từ người dùng",
-    "title-9": "Hướng dẫn từ chối đơn đặt",
-    "title-10": "Hướng thêm nhân viên vào cửa hàng",
-    "title-11": "Hướng dẫn tạo dịch vụ",
-    "title-12": "Hướng dẫn thêm ưu đãi cho dịch vụ",
-    "title-13": "Hướng dẫn sửa hồ sơ cửa hàng "
+    "title-1": "Instructions for registering a bukbe account with Telegram",
+    "title-2": "Instructions to register a bukbe account by phone number",
+    "title-3": "Direction to login by phone number",
+    "title-4": "Instruction to login to bukbe with Telegram otp code",
+    "title-5": "How to book an appointment from Bukbe shop",
+    "title-6": "Branding Guide",
+    "title-7": "Shop Creation Guide",
+    "title-8": "Guide to receive orders and start serving from users",
+    "title-9": "Order Rejection Instructions",
+    "title-10": "Direct more employees to the store",
+    "title-11": "Service Creation Guide",
+    "title-12": "Instructions to add incentives to the service",
+    "title-13": "A Guide to Editing Store Profiles",
+    "registerTelegram": {
+      "step_1-text-1": "Step 1: Click on",
+      "step_1-text-2": "“Register & Login with Telegram”",
+      "step_1-text-3": "then click open Telegram",
+      "step_2-text-1": "Step 2: To register press",
+      "step_2-text-2": "“/START”",
+      "step_2-text-3": "then press",
+      "step_2-text-4": "“Share your phone number”",
+      "step_2-text-5": "after pressing share phone number is done and press select",
+      "step_2-text-6": "“/Login”",
+      "step_2-text-7": "you will get a link to redirect to the system. Or you can log in by going back to the login screen and selecting",
+      "step_2-text-8": "“Login with OTP”"
+    },
+    "registerPhoneNumber": {
+      "step_1-text-1": "Step 1: Click on",
+      "step_1-text-2": "“Register & Login with your phone number”",
+      "step_1-text-3": "then click open",
+      "step_1-text-4": "“Register”",
+      "step_1-text-5": "to create your account.",
+      "step_2-text-1": "Step 2: Then: enter",
+      "step_2-text-2": "“Phone number”",
+      "step_2-text-3": "Enter the phone number in the blank box on the screen, continue typing",
+      "step_2-text-4": "“Password”",
+      "step_2-text-5": "at least 8 characters, then",
+      "step_2-text-6": "“Enter the password”",
+      "step_2-text-7": "to confirm again to confirm whether it is correct or not, finally accept",
+      "step_2-text-8": "“Agree to terms of service and privacy policy”",
+      "step_2-text-9": "and select “Register” to create your account."
+    },
+    "loginPhoneNumber": {
+      "step_1-text-1": "Step 1: Click on",
+      "step_1-text-2": "“Register & Login with your phone number”",
+      "step_1-text-3": "",
+      "step_2-text-1": "to log in to your account.",
+      "step_2-text-2": "“Phone number”",
+      "step_2-text-3": "that you have registered in the empty box enter the phone number on the screen, continue to enter",
+      "step_2-text-4": "““Password””",
+      "step_2-text-5": "at least 8 characters that you have created, then choose",
+      "step_2-text-6": "“/Login”",
+      "step_2-text-7": "to login to your account your account."
+    },
+    "loginTelegram": {
+      "step_1-text-1": "Step 1: Click on",
+      "step_1-text-2": "“Login with OTP”",
+      "step_1-text-3": "to log in to your account.",
+      "step_2-text-1": "Step 2: Then enter",
+      "step_2-text-2": "“Phone number”",
+      "step_2-text-3": "that you have registered in the empty box enter the phone number on the screen, continue to press",
+      "step_2-text-4": "“Get OTP”",
+      "step_2-text-5": "để gửi mã OTP bao gồm 6 số đến tài khoản Telegram của bạn, sau đó nhập mã OTP đã được gửi đến Telegram vào ô trống trên màn hình để đăng nhập vào tài khoản của bạn."
+    },
+    "booking": {
+      "step_1-text-1": "Step 1: First you need to choose a store that you have the services you need and click it",
+      "step_2-text-1": "Step 2: Then you add all the services you want to your cart and press",
+      "step_2-text-2": "“Book”",
+      "step_3-text-1": "Step 3: First you need to choose",
+      "step_3-text-2": "“Day”",
+      "step_3-text-3": "and",
+      "step_3-text-4": "“Time”",
+      "step_3-text-5": "Start doing the service. If you want the service to be done at your home, click",
+      "step_3-text-6": "“Serve at home”",
+      "step_3-text-7": "and enter all the information contained therein and press",
+      "step_3-text-8": "“Continue”",
+      "step_4-text-1": "Step 4: continue to choose",
+      "step_4-text-2": "“Payment methods”",
+      "step_4-text-3": "and",
+      "step_4-text-4": "“Enter a note”",
+      "step_4-text-5": "If you have a message with the store"
+    },
+    "createBranch": {
+      "text": "First you need to register an account with Telegram, then you will need to log in for the first time to create your own brand. You need to enter all the information that is displayed on the screen to create your brand."
+    },
+    "createStore": {
+      "step_1-text-1": "Step 1: First you need to have your own brand. Then you click",
+      "step_1-text-2": "“Create Store”",
+      "step_1-text-3": "in the upper right corner of the screen.",
+      "step_2-text-1": "Step 2: Then you enter all the basic information of a store and press",
+      "step_2-text-2": "“Continue”",
+      "step_3-text-1": "Step 3: First you need to add",
+      "step_3-text-2": "“Cover image”",
+      "step_3-text-3": "and",
+      "step_3-text-4": "“Avatar”",
+      "step_3-text-5": ". Then add",
+      "step_3-text-6": "“About the store”",
+      "step_3-text-7": "yours and",
+      "step_3-text-8": "“Opening/closing time”",
+      "step_3-text-9": ".finally add a PR Image for the store and press",
+      "step_3-text-10": "“Confirm”",
+      "step_3-text-11": "Create a store and wait for the Admin to approve the store, then you can start a business"
+    },
+    "serve": {
+      "step_1-text-1": "Step 1: First you need to log in to the supplier page and then click on the order that the customer has placed and press",
+      "step_1-text-2": "“Receive orders”",
+      "step_2-text-1": "Step 2: Then the status of the order will change to waiting for the customer until the customer has come to the store and entered the shop, then click on the customer to come to catch the status of the order to change to working until the shop owner confirms it. complete and send a notification to the customer that the order is complete"
+    },
+    "refuseOrder": {
+      "step_1-text-1": "Step 1: First you need to log in to the supplier page and then click on the order that the customer has placed and press",
+      "step_1-text-2": "“Refuse to accept”",
+      "step_2-text-1": "Step 2: Then choose a reason for canceling the schedule or enter a reason to send it to the customer"
+    },
+    "moreStaff": {
+      "step_1-text-1": "Step 1: First you press and the Menu bar on the upper left corner of the screen and select the section",
+      "step_1-text-2": "“Account”",
+      "step_1-text-3": "then receive and choose the part",
+      "step_1-text-4": "“Human resource management”",
+      "step_2-text-1": "Step 2: Then click",
+      "step_2-text-2": "“More staff”",
+      "step_2-text-3": "In the left corner of the screen, next enter the employee's phone number to find the employee's information (note that the employee has registered a bukbe account on the staff page). After you have found the employee, click add, the system will fill in all the basic information and you just need to choose for that employee to serve which services in your store. If you want to consider that employee as a manager to support you, then click store manager or you want that employee to work at the store and work at home, then press the same button at the end.",
+      "step_2-text-4": "“Update”",
+      "step_2-text-5": "to complete add staff"
+    },
+    "createService": {
+      "step_1-text-1": "Step 1: First you press and the Menu bar on the upper left corner of the screen and select the section",
+      "step_1-text-2": "“Account”",
+      "step_1-text-3": "then receive and choose the part",
+      "step_1-text-4": "“Service”",
+      "step_2-text-1": "Step 2: Then click",
+      "step_2-text-2": "“More services”",
+      "step_2-text-3": "in the left corner of the screen, next select the service group that you store. continue typing",
+      "step_2-text-4": "“service name”",
+      "step_2-text-5": "next",
+      "step_2-text-6": "“Service Description”",
+      "step_2-text-7": "then",
+      "step_2-text-8": "“Service prices”",
+      "step_2-text-9": "and",
+      "step_2-text-10": "“Estimated time”",
+      "step_2-text-11": "finally more",
+      "step_2-text-12": "“Image”",
+      "step_2-text-13": "description of the service and confirmation that the service is available",
+      "step_2-text-14": "“Serve at home”",
+      "step_2-text-15": "or not and press",
+      "step_2-text-16": "“Create service”"
+    },
+    "moreOffers": {
+      "step_1-text-1": "Step 1: First you press and the Menu bar on the upper left corner of the screen and select the section",
+      "step_1-text-2": "“Account”",
+      "step_1-text-3": "then receive and choose the part",
+      "step_1-text-4": "“Service”",
+      "step_2-text-1": "Step 2: Then click",
+      "step_2-text-2": "“Three-dot icon”",
+      "step_2-text-3": "to the right of the screen service, then click",
+      "step_2-text-4": "“more offers”",
+      "step_2-text-5": ". Then we will enter the price in the discount box (note that the amount to be reduced must be less than the service increment), finally click",
+      "step_2-text-6": "“Apply”"
+    },
+    "editProfile": {
+      "step_1-text-1": "Step 1: First, you press and the Menu bar on the upper left corner of the screen and select the “Services” section",
+      "step_1-text-2": "“Account”",
+      "step_1-text-3": "then receive and choose the part",
+      "step_1-text-4": "“Product Profile”",
+      "step_2-text-1": "Step 2: You can change like “Change cover photo”, “Available photo”, store information like",
+      "step_2-text-2": "“Store Description”",
+      "step_2-text-3": "“Store phone number”",
+      "step_2-text-4": "“Opening/closing hours”",
+      "step_2-text-5": "“Store Address”",
+      "step_2-text-6": ". Or the store's PR images.",
+      "comma": ","
+    }
   }
 }
