fix: 🐛 display language button and edit translate

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -48,19 +48,19 @@
     }
   },
   "Guide": {
-    "title-1": "Instructions for registering a bukbe account with Telegram",
-    "title-2": "Instructions to register a bukbe account by phone number",
-    "title-3": "Direction to login by phone number",
-    "title-4": "Instruction to login to bukbe with Telegram otp code",
-    "title-5": "How to book an appointment from Bukbe shop",
-    "title-6": "Branding Guide",
-    "title-7": "Shop Creation Guide",
-    "title-8": "Guide to receive orders and start serving from users",
-    "title-9": "Order Rejection Instructions",
-    "title-10": "Direct more employees to the store",
-    "title-11": "Service Creation Guide",
-    "title-12": "Instructions to add incentives to the service",
-    "title-13": "A Guide to Editing Store Profiles",
+    "title-register-telegram": "Instructions for registering a bukbe account with Telegram",
+    "title-register-phone": "Instructions to register a bukbe account by phone number",
+    "title-login-phone": "Direction to login by phone number",
+    "title-login-telegram": "Instruction to login to bukbe with Telegram otp code",
+    "title-booking": "How to book an appointment from Bukbe shop",
+    "title-branch": "Branding Guide",
+    "title-store": "Shop Creation Guide",
+    "title-serve": "Guide to receive orders and start serving from users",
+    "title-order": "Order Rejection Instructions",
+    "title-staff": "Direct more employees to the store",
+    "title-services": "Service Creation Guide",
+    "title-offers": "Instructions to add incentives to the service",
+    "title-edit-profile": "A Guide to Editing Store Profiles",
     "registerTelegram": {
       "step_1-text-1": "Step 1: Click on",
       "step_1-text-2": "“Register & Login with Telegram”",
